<resources>
    <string name="app_name">PDManager</string>
    <string name="title_basics_section">Session</string>
    <string name="title_theme_section">Theme</string>
    <string name="title_tiles_section">Tiles</string>
    <string name="title_sensors_section">Display</string>
    <string name="title_log_section">Log</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">Login</string>
    <string name="action_lock">Lock</string>
    <string name="management_label">Press the button to start or stop a recording session</string>
    <string name="settings_label">Settings</string>
    <string name="get_fw_version_label">Get FW Version</string>
    <string name="get_hw_version_label">Get HW Version</string>
    <string name="vibration_label">Vibration</string>
    <string name="vibrate_label">Vibrate</string>
    <string name="choose_band_label">Choose band</string>
    <string name="choose_vibration_pattern_label">Choose pattern</string>
    <string name="versioning_label">Versions</string>
    <string name="forServiceMessage">Thanks for participating to our study. This message will be always on your screen.  Check periodically the other notifications regarding pending tasks.</string>
    <string name="connect_label">Start</string>
    <string name="disconnect_label">Disconnect</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="ok_button_text">OK</string>
    <string name="bgnd_image_label">Background image</string>
    <string name="base_label">Base</string>
    <string name="change_label">Change</string>
    <string name="get_colors_label">Get Colors</string>
    <string name="set_colors_label">Set Colors</string>
    <string name="get_image_label">Get image</string>
    <string name="set_image_label">Set image</string>
    <string name="high_contrast_label">High contrast</string>
    <string name="highlight_label">Highlight</string>
    <string name="lowlight_label">Lowlight</string>
    <string name="muted_label">Muted</string>
    <string name="secondary_text_label">Secondary text</string>
    <string name="select_label">Select...</string>
    <string name="theme_colors_label">Theme colors</string>
    <string name="title_settings_section">Settings</string>
    <string name="title_annotation_section">Annotation</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="startButton">Start</string>
    <string name="monitoring_label">Monitoring</string>
    <string name="monitoringstatus_label">not monitoring</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_files">FilesActivity</string>
    <string name="app_key">7tl4ec82n8e2r67</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_clinician">ClinicianActivity</string>
    <string name="title_activity_caregiver">CaregiverActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="drawerCaption">Telerik examples</string>
    <string name="version_name">Q3 2015</string>
    <string name="version_code">2015.3.0</string>
    <string name="homeString">Home</string>
    <string name="favoritesStringPascalCase">Favorites</string>
    <string name="settingsString">Settings</string>
    <string name="aboutString">About</string>
    <string name="allStringPascalCase">All</string>
    <string name="allControlsStringPascalCase">All controls</string>
    <string name="allStringAllCaps">ALL</string>
    <string name="favoritesStringAllCaps">FAVORITES</string>
    <string name="actionbar_section_highlighted">Highlighted</string>
    <string name="search_title">Search</string>
    <string name="title_activity_chart">ChartActivity</string>
    <string name="line_examples_title">Monthly sales revenue, (2014)</string>
    <string name="pie_series_title">International sales by country, 2014</string>
    <string name="area_chart_title">Monthly sales revenue, 2014</string>
    <string name="bar_series_title">Performance summary, 2014</string>
    <string name="scatter_series_title">Mean hourly earnings in the UK (private vs public)</string>
    <string name="bubble_series_title">Investments - Equities &amp; Mutual Funds</string>
    <string name="versionStringPascalCase">Version</string>
    <string name="emptyContentString">Already have any favorite demos? Add them here by choosing \'Add to Favorites\' from the overflow menu or the example context menu.</string>
    <string name="title_activity_view_code">View code</string>
    <string name="title_activity_settings">Settings</string>
    <string name="all_day_string">ALL DAY</string>
    <string name="empty_range_selection_text">Select period of stay</string>
    <string name="calendar_range_title">Need a place to stay?</string>
    <string name="calendar_range_how_to_text">Drag over the period of your stay or tap on your check-in and check-out dates</string>
    <string name="calendar_range_left_arrow_description">Tap to move to previous month</string>
    <string name="calendar_range_right_arrow_description">Tap to move to next month</string>
    <string name="list_view_reorder_empty">No tasks</string>
    <string name="list_view_reorder_header">TASKS</string>
    <string name="list_view_reorder_btn_list1">TO DO LIST</string>
    <string name="list_view_reorder_btn_list2">SHOPPING LIST</string>
    <string name="list_view_reorder_complete">complete</string>
    <string name="list_view_reorder_delete">delete</string>
    <string name="list_view_selection_header">Reading list</string>
    <string name="list_view_selection_header_in_reorder">Reorder</string>
    <string name="list_view_selection_reorder">reorder</string>
    <string name="list_view_selection_deleted">Deleted.</string>
    <string name="list_view_selection_fav">fav</string>
    <string name="list_view_selection_delete">del</string>
    <string name="list_view_selection_undo">UNDO</string>
    <string name="list_view_selection_btn_list1">ALL</string>
    <string name="list_view_selection_btn_list2">FAVORITES</string>
    <string name="list_view_deck_title">NEW RECIPES</string>
    <string name="list_view_deck_image_desc">Recipe</string>
    <string name="list_view_slide_image_desc">Destination</string>
    <string name="list_view_slide_enquiry">SEND ENQUIRY</string>
    <string name="list_view_slide_attractions">Attractions</string>
    <string name="book_a_hotel_string">Book a hotel!</string>
    <string name="tips_presenter_content">Telerik Examples highlights the controls included in Telerik UI for Android - Chart, Calendar, DataForm, ListView and SideDrawer.</string>
    <string name="tips_presenter_got_it_text">GOT IT!</string>
    <string name="isn_bold"><b>ISN</b></string>
    <string name="spinners_title">International Software Company</string>
    <string name="indicators_range_dialog_title">Range</string>
    <string name="indicators_custom_dialog_trends_title">SET TREND LINES</string>
    <string name="indicators_custom_dialog_indicators_title">SET INDICATORS</string>
    <string name="user_statistics_setting">Send anonymous usage statistics</string>
    <string name="analytics_message_send"><b>Send statistics</b></string>
    <string name="analytics_message_dont_send">Do not send statistics</string>
    <string name="analytics_message">It is our goal to always provide the best products and user experience to our customers. By enabling this option anonymous data will be collected and sent to Telerik detailing how the Telerik Examples application is being used. No information is collected that could be used to either identify or contact you. \nYou can change this anytime from the Settings menu.</string>
    <string name="could_not_change_setting">Could not change setting</string>
    <string name="analytics_message_title">Help us improve Telerik Examples</string>
    <string name="list_view_layout_modes_dialog_title">Choose food type</string>
    <string name="internet_connectivity_prompt">Internet connectivity is required for this example.</string>
    <string name="documentation">Check out the product documentation.</string>
    <string name="documentation_example_info">Check out the documentation.</string>
    <string name="productPage">Check out the product page.</string>
    <string name="medalertpart1">Did you get the</string>
    <string name="medalertpart2">at</string>
    <string name="medalertpart3">Your next </string>
    <string name="medalertpart4">intake is at </string>
    <string name="confirm">yes</string>
    <string name="reject">no</string>
    <string name="ngfmess2">You have already pressed the not feeling good button!</string>
    <string name="ngfmess1">Press the button when you are NOT feeling good!</string>
    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="finish">Submit your answers</string>
    <string name="review">Review</string>
    <string name="label_your_name">DIRECTIONS</string>
    <string name="label_your_email">Email</string>
    <string name="hint_your_name">e.g. Larry</string>
    <string name="hint_your_email">Optional</string>
    <string name="submit_confirm_message">Are you sure?</string>
    <string name="submit_confirm_button">Submit</string>
    <string-array name="indicators_range_options">
        <item>1 month</item>
        <item>6 months</item>
        <item>1 year</item>
        <item>5 years</item>
    </string-array>
    <string-array name="indicators_range_button_text">
        <item>Range: <b>1 M</b></item>
        <item>Range: <b>6 M</b></item>
        <item>Range: <b>1 Y</b></item>
        <item>Range: <b>5 Y</b></item>
    </string-array>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="loginButtonText">Log in with OpenID Connect</string>
    <string name="editConfButton">OpenId Connect Client Configuration</string>
    <string name="paired_associates_learning">Paired Associates Learning</string>
    <string name="pattern_recognition_memory">Pattern Recognition Memory</string>
    <string name="spatial_working_memory">Spatial Working Memory</string>
    <string name="spatial_span">Spatial Span</string>
    <string name="stop_signal_task">Stop Signal Task</string>
    <string name="attention_switching_task">Attention Switching Task</string>
    <string name="visual_analogue_scale">Visual Analogue Scale</string>
    <string name="wisconsin_card_sorting_test">Wisconsin Card Sorting</string>
    <string name="london_towers_test">London Towers</string>
	<string name="title_menu10">Visual Learning</string>
    <string name="menuFirst">Finger Tapping Test</string>
    <string name="menuSecond">Cognitive Tests</string>
    <string name="vas2_s0">Strongly\ndisagree</string>
    <string name="vas2_s1">Disagree</string>
    <string name="vas2_s2">\nNeutral</string>
    <string name="vas2_s3">Agree</string>
    <string name="vas2_s4">Strongly\nagree</string>
    <string name="fttoneTvInstructions">Tap on the green area as fast as you can during 10 seconds. You can start when you wish.</string>
    <string name="fttoneTvTap">Tap Here!</string>
    <string name="fttoneTvTimeNumberOfTaps">taps</string>
    <string name="fttoneTvTime">Time</string>
    <string name="fttEndMessage">Well done! you have finished.</string>
    <string name="fttEndButtonRepeat">Take another test</string>
    <string name="fttEndButtonExit">Exit</string>
    <string name="menuThird">Voice test</string>
</resources>