<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonPALPRM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/shape_button"
                android:gravity="left|center_vertical"
                android:padding="15dp"
                android:text="@string/title_menu10"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonPairedAssociatesLearning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/shape_button"
                android:gravity="left|center_vertical"
                android:padding="15dp"
                android:text="@string/paired_associates_learning"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <Button
                android:id="@+id/buttonPatternRecognitionMemory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/shape_button"
                android:gravity="left|center_vertical"
                android:padding="15dp"
                android:text="@string/pattern_recognition_memory"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <Button
                android:id="@+id/buttonSpatialWorkingMemory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/shape_button"
                android:gravity="left|center_vertical"
                android:padding="15dp"
                android:text="@string/spatial_working_memory"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <Button
                android:id="@+id/buttonSpatialSpan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/shape_button"
                android:gravity="left|center_vertical"
                android:padding="15dp"
                android:text="@string/spatial_span"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonStopSignalTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/shape_button"
                android:gravity="left|center_vertical"
                android:padding="15dp"
                android:text="@string/stop_signal_task"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonAttentionSwitchingTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/shape_button"
                android:gravity="left|center_vertical"
                android:padding="15dp"
                android:text="@string/attention_switching_task"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonVisualAnalogueScale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/shape_button"
                android:gravity="left|center_vertical"
                android:padding="15dp"
                android:text="@string/visual_analogue_scale"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonVisualAnalogueScale2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/shape_button"
                android:gravity="left|center_vertical"
                android:padding="15dp"
                android:text="@string/visual_analogue_scale"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <Button
                android:id="@+id/buttonWisconsin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/shape_button"
                android:gravity="left|center_vertical"
                android:padding="15dp"
                android:text="@string/wisconsin_card_sorting_test"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonLondon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/shape_button"
                android:gravity="left|center_vertical"
                android:padding="15dp"
                android:text="@string/london_towers_test"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>