<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/black"
              android:gravity="center_horizontal|center_vertical"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="15dp"
                  android:background="@color/black"
                  android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="10dp"
            android:text="@string/fttoneTvInstructions"
            android:textColor="#FFF"
            android:textSize="20dp"/>

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:indeterminate="false"
            android:minHeight="50dp"
            android:minWidth="200dp"
            android:progress="100"/>

        <TextView
            android:id="@+id/fttoneTvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/fttoneTvTime"
            android:textColor="#CCC" />

        <TextView
            android:id="@+id/fttoneNumberOfTaps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/fttoneTvTimeNumberOfTaps"
            android:textColor="#CCC" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonFTTOneTap"
        style="@style/round_button_text"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_round"
        android:text="@string/fttoneTvTap"/>

</LinearLayout>