<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonMenuFTT"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/shape_button"
                android:gravity="left|center_vertical"
                android:padding="15dp"
                android:text="@string/menuFirst"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonMenuCognitive"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/shape_button"
                android:gravity="left|center_vertical"
                android:padding="15dp"
                android:text="@string/menuSecond"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonMenuVoice"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/shape_button"
                android:gravity="left|center_vertical"
                android:padding="15dp"
                android:text="@string/menuThird"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>